overflow fix; android menu btn fix

--- a/style.css
+++ b/style.css
@@ -1,12 +1,9 @@
 html {
   background-color: black;
-}
-
-/* *,
-*:before,
-*:after {
   max-width: 100%;
-} */
+  max-height: 1000%;
+  overflow-x: hidden;
+}
 
 .canvasContainer {
   margin: 0 auto;
